--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -33,6 +33,8 @@ jobs:
         run: npm ci
       - name: Build with VitePress
         run: npm run docs:build
+      - name: Build again to fix uml
+        run: npm run docs:build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
