--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -27,6 +27,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           cache: npm
+      - name: Cache docs/public
+        uses: actions/cache@v4
+        with:
+          path: docs/public
+          key: ${{ runner.os }}-docs-public-${{ hashFiles('docs/public/**') }}
+          restore-keys: |
+            ${{ runner.os }}-docs-public-
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
