--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "vpd": "vitepress-plugin-diagrams"
   },
   "dependencies": {
     "@catppuccin/vitepress": "^0.1.2"
