--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@types/node": "^24.5.2",
     "vitepress": "^1.6.4",
     "vitepress-plugin-diagrams": "^1.0.0"
+  },
+ "engines": {
+    "node": ">=24.8.0"
   }
 }
