--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -21,7 +21,8 @@ jobs:
     services:
       kroki:
         image: yuzutech/kroki
-        ports: 8080:8080
+        ports:
+          - 8080:8080
     env:
       KROKI_SERVER_URL: 127.0.0.1:8080
       OPTIONS: --network-family-autoselection-attempt-timeout=60000
