--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -21,9 +21,8 @@ jobs:
     services:
       kroki:
         image: yuzutech/kroki
-
     env:
-      KROKI_SERVER_URL: http://kroki:8080/
+      KROKI_SERVER_URL: kroki:8080
     steps:
       - name: Checkout
         uses: actions/checkout@v4
