--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -46,8 +46,8 @@ jobs:
         run: npm ci
       - name: Build with VitePress
         run: npm run docs:build
-      # - name: Build again
-      #   run: npm run docs:build
+      - name: Build again
+        run: npm run docs:build
       - name: Save docs/public cache
         uses: actions/cache/save@v4
         with:
