--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -18,11 +18,13 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-#    services:
-#      kroki:
-#        image: yuzutech/kroki
-#    env:
-#      KROKI_SERVER_URL: kroki:8080
+    services:
+      kroki:
+        image: yuzutech/kroki
+        ports:
+          - 8000:8000
+    env:
+      KROKI_SERVER_URL: http://127.0.0.1:8000
     steps:
       - name: Checkout
         uses: actions/checkout@v4
